fix(components): click on mobile nav body to close the nav

--- a/src/app/layouts/default/mobile-nav/mobile-nav.component.scss
+++ b/src/app/layouts/default/mobile-nav/mobile-nav.component.scss
@@ -18,12 +18,13 @@
   height: 100%;
   padding-top: 50px;
   transition: all 3s ease-in;
-  z-index: 20;
+  z-index: 10;
 
   &__container {
     display: flex;
     flex-direction: column;
     height: 100%;
+    z-index: 20;
   }
   &__header {
     display: flex;
@@ -90,7 +91,7 @@
   animation-duration: 0.3s;
 
   display: block;
-  width: 75%;
+  width: 70%;
   min-width: 350px;
 }
 
@@ -105,7 +106,7 @@
     opacity: 0;
   }
   100% {
-    width: 75%;
+    width: 70%;
     min-width: 350px;
     opacity: 100%;
   }
@@ -113,7 +114,7 @@
 
 @keyframes closeNav {
   0% {
-    width: 75%;
+    width: 70%;
     opacity: 100%;
   }
   100% {
